added viewport and fixed alignment with different sized screens

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
         </nav>
     </div>
 
-    <div class="content">
+    <div class="content" id="formSize">
         <h1>
             Contact
         </h1>
