--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                     <a href="index.html">About</a>
                 </li>
                 <li class="line">
-                    <a href="Portfolio.html">Portfolio</a>
+                    <a href="portfolio.html">Portfolio</a>
                 </li>   
                 <li>
                     <a href="contact.html">Contact</a>
