fixed image naming for gitpages

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,35 +41,35 @@
 
             <div class="box-set">
                 <div class="box box-1">
-                    <img class="image" src="assets/images/hangman.jpg">
+                    <img class="image" src="assets/images/Hangman.jpg">
                     <span>
                         Hangman
                     </span>
                 </div>
 
                 <div class="box box-2">           
-                    <img class="image" src="assets/images/trivia game.jpg">
+                    <img class="image" src="assets/images/Trivia-Game.jpg">
                     <span>
                         Trivia Game
                     </span>
                 </div>
 
                 <div class="box box-3">
-                    <img class="image" src="assets/images/rock paper scissors.jpg">
+                    <img class="image" src="assets/images/Rock-Paper-Scissors.jpg">
                     <span>
                         Rock Paper Scissors
                     </span>
                 </div>
 
                 <div class="box box-4">
-                    <img class="image" src="assets/images/rpg game.jpg">
+                    <img class="image" src="assets/images/RPG-Game.jpg">
                     <span>
                         RPG Game
                     </span>
                 </div>
 
                 <div class="box box-5">
-                    <img class="image" src="assets/images/rutgers info widget.jpg">
+                    <img class="image" src="assets/images/Rutgers-Info-Widget.jpg">
                         <span>
                             Rutgers Info Widget
                         </span>
